# opencv_cpp

./: .gitignore  CMakeLists.txt  main.cpp  readme.MD  ubersnap.cpp  ubersnap.h
lib/: opencv_core481.lib  opencv_imgproc481.lib
